force-app/main/default/objects/Especie__c/Especie__c.object-meta.xml
<CustomObject>
    <description>Muestra las especies de las plantas</description>
    <label>Especie</label>
    <nameField>
        <label>Nombre de Especie</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Especies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>