force-app/main/default/objects/Especie__c/fields/Riego_Constante__c.field-meta.xml
<CustomField>
    <fullName>Riego_Constante__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Riego constante</description>
    <label>Riego Constante</label>
    <type>Checkbox</type>
</CustomField>