force-app/main/default/objects/Especie__c/fields/Temperatura_Ideal__c.field-meta.xml
<CustomField>
    <fullName>Temperatura_Ideal__c</fullName>
    <description>Temperatura a la que una especie debería de estar</description>
    <inlineHelpText>Ingresa la temperatura ideal en centígrados</inlineHelpText>
    <label>Temperatura Ideal</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>