force-app/main/default/objects/Especie__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <description>Tipo de especie</description>
    <inlineHelpText>Selecciona el tipo de especie de la planta. Ej. Planta Comestible: Menta</inlineHelpText>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Comestible</fullName>
            </value>
            <value>
                <fullName>Ornamental</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>